argocd-declarative/manifests/pgadmin-app/pgadmin.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pgadmin

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: pgadmin
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.1.0
          ports:
            - containerPort: 80
          environment:
            # PGADMIN_DEFAULT_EMAIL: pgadmin@admin.com
            # PGADMIN_DEFAULT_PASSWORD: password
            PGADMIN_CONFIG_LOGIN_BANNER: Authorised users only!
          volumeMounts:
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
      volumes:
        - name: pgadmin-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: pgadmin
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: pgadmin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: pgadmin.int.taqniat.ae  # Change this to your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
